# term-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: SimpleSprite.hpp  Sprite.hpp
include/sprite/: Animation.hpp  SimpleSprite.hpp  Sprite.hpp  oneTimeAnimation.hpp
src/sprite/: Animation.cpp  SimpleSprite.cpp  Sprite.cpp  oneTimeAnimation.cpp
src/sprite/test/: testSprite.cpp
